# SingularityEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Engine/: CMakeLists.txt
Engine/include/sngl/Core/: Engine.h
Engine/include/sngl/Graphics/: Device.h  Instance.h  Renderer.h  Types.h
Engine/include/sngl/Platform/: SDLWindow.h
Engine/src/Core/: Engine.cpp  LinearArenaAllocator.cpp  LinearArenaAllocator.h  Math.h  POTSlabAllocator.cpp  POTSlabAllocator.h
Engine/src/Graphics/: Device.cpp  Instance.cpp  Renderer.cpp
Engine/src/Graphics/Vulkan/: VulkanDevice.cpp  VulkanDevice.h  VulkanGlobals.cpp  VulkanGlobals.h  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderer.cpp  VulkanRenderer.h
Engine/src/Platform/: OS.h  OS_win32.cpp  SDLWindow.cpp
Sandbox/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt
Tests/Unit/: Allocators.cpp  CMakeLists.txt
